# mgbtas

./: CMakeLists.txt  README.md  mgbtas.cpp  mgbtas.h  mgbtas.pc.cmakein  mgbtas_config.h.in  mgbtas_core.cpp  mgbtas_core.h  mgbtas_demo.cpp  mgbtas_demo.h  mgbtas_test.cpp  mgbtas_time.cpp  mgbtas_time.h  mgbtas_ui.cpp  mgbtas_ui.h
