PROJECT(mgbtas)

SET( CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-g -std=c++11 -lpthread" )

SET( ${PROJECT_NAME}_SRC mgbtas.cpp )

ADD_LIBRARY( ${PROJECT_NAME} ${${PROJECT_NAME}_SRC} )

SET( ${PROJECT_NAME}_DEMO_SRC mgbtas_demo.cpp )

ADD_EXECUTABLE( ${PROJECT_NAME}_demo ${${PROJECT_NAME}_DEMO_SRC} )

TARGET_LINK_LIBRARIES( ${PROJECT_NAME}_demo ${PROJECT_NAME} )

ADD_EXECUTABLE( ${PROJECT_NAME}_test mgbtas_test.cpp )

TARGET_LINK_LIBRARIES( ${PROJECT_NAME}_test ${PROJECT_NAME} )
